--- a/OFFERS-354/ru/styles/scss/main.scss
+++ b/OFFERS-354/ru/styles/scss/main.scss
@@ -465,14 +465,13 @@
     }
   }
   .bagr {
-    background-image: url(../../img/blog.jpg);
     height: 445px;
     padding-top: 26px;
     background-size: cover;
     background-position: center;
     padding: 26px 22px;
     position: relative;
-   
+
     p {
       position: absolute;
       bottom: 0;
@@ -486,17 +485,54 @@
       margin-left: 30px;
       margin-right: 20px;
     }
-    @include media-lg-tablet{
+    @include media-lg-tablet {
       height: 300px;
-      P{
+      P {
         font-size: 15px;
       }
     }
     @include media-phone-med {
-      p{
+      p {
         margin-left: 20px;
         font-size: 12px;
       }
+    }
+  }
+  .pfo {
+    background-image: url(../../img/blog2.jpg);
+    position: relative;
+    display: grid;
+    grid-template-rows: minmax(1px, 40px) minmax(1px, 170px) minmax(1px, 30px);
+    h4{
+      margin: 0;
+      text-align: center;
+    }
+    span{
+      display: block;
+      font-size: 12px;
+      width: 121px;
+      text-align: center;
+   
+    }
+  }
+  .border {
+    color: #000000;
+    font-size: 20px;
+    border: 5px solid #dc513a;
+    box-sizing: border-box;
+    padding: 20px;
+    margin: 20px 0;
+    padding-left: 30px;
+    ul {
+      margin-left: 10px;
+      padding-top: 20px;
+    }
+    li {
+      padding: 10px;
+
+      padding-left: 6px;
+      font-weight: normal;
+      font-style: normal;
     }
   }
 }
