--- a/OFFERS-354/ru/styles/scss/components/_sidebar.scss
+++ b/OFFERS-354/ru/styles/scss/components/_sidebar.scss
@@ -4,75 +4,109 @@
   margin: 0 auto;
   padding: 0 36px;
   padding-left: 20px;
-  &__top {
-    background: #f3f3f3;
-    padding: 18px 40px;
-    padding-bottom: 36px;
-    .btn {
-      max-width: 200px;
-      img {
-        margin-left: 10px;
-      }
-    }
-    p {
-      text-align: center;
-      font-weight: bold;
-      font-size: 14px;
-    }
-  }
   @include media-large {
     display: none;
   }
-  &__title {
-    text-transform: uppercase;
-    font-weight: bold;
-    color: #808080;
-    font-size: 18px;
-  }
-  &__main {
-    border: 1px solid #bebebe;
-    box-sizing: border-box;
-    border-radius: 10px;
-    padding: 10px;
-    margin-top: 40px;
-  }
-  &__item {
-    text-decoration: none;
 
+  &__new {
+    margin: 16px 0;
     display: block;
-    position: relative;
-    padding: 16px 0;
-    padding-bottom: 25px;
-
-    img {
-      width: 100%;
-    }
-
-    p {
-      font-weight: bold;
-      margin: 0;
-    }
-    b {
-      font-size: 16px;
-    }
-    span {
-      color: #747474;
-      display: block;
-      font-size: 12px;
-      margin-top: 10px;
-    }
-
-    .dat {
-      margin-top: 10px;
-      display: block;
-      color: #747474;
-      font-size: 12px;
-    }
-  }
-  a {
+    box-sizing: border-box;
     text-decoration: none;
-  }
-  h3 {
-    margin-top: 0;
+    &:nth-child(1) {
+      background-image: url(../../img/side1.png);
+      background-size: contain;
+      background-repeat: no-repeat;
+      padding: 5px 13px;
+      padding-left: 121px;
+      padding-top: 42px;
+      height: 104px;
+      P {
+        color: #fff;
+        font-size: 10px;
+        margin: 0;
+        line-height: 1.2;
+        font-weight: normal;
+      }
+    }
+    &:nth-child(2) {
+      background-image: url(../../img/side2.png);
+      background-size: contain;
+      background-repeat: no-repeat;
+      padding: 9px 13px;
+      padding-left: 121px;
+      height: 119px;
+      span {
+        display: block;
+        font-size: 8px;
+        color: #9b9b9b;
+        b {
+          margin-left: 2px;
+          font-size: 10px;
+          color: #ffe900;
+        }
+      }
+      P {
+        text-transform: uppercase;
+        font-weight: 800;
+        margin: 0;
+        margin-bottom: 10px;
+        font-size: 13px;
+        color: #ffe900;
+      }
+    }
+    &:nth-child(3) {
+      background-image: url(../../img/side3.png);
+      background-size: contain;
+      background-repeat: no-repeat;
+      padding: 9px 13px;
+      padding-left: 16px;
+      padding-top: 233px;
+      height: 427px;
+      span {
+        display: block;
+        background: #649b6d;
+        border-radius: 5px;
+        text-transform: uppercase;
+        font-weight: 800;
+        font-size: 10px;
+        max-width: 152px;
+        color: #ffffff;
+        padding: 5px;
+        text-align: center;
+      }
+      P {
+        text-transform: uppercase;
+        font-weight: 800;
+        margin: 0;
+        margin-top: 15px;
+        font-size: 13px;
+        color: #ffffff;
+      }
+    }
+    &:nth-child(4) {
+      background-image: url(../../img/side4.png);
+      background-size: contain;
+      background-repeat: no-repeat;
+      padding: 9px 14px;
+      position: relative;
+      padding-left: 16px;
+      padding-top: 20px;
+      margin-bottom: 0;
+      height: 168px;
+
+      P {
+        text-transform: uppercase;
+        font-weight: 800;
+        position: absolute;
+        bottom: 0;
+        margin: 0;
+        margin-top: 15px;
+        font-size: 13px;
+        left: 0;
+        padding: 5px 14px;
+        color: #ffffff;
+      }
+    }
   }
 }
