--- a/OFFERS-354/ru/styles/scss/main.scss
+++ b/OFFERS-354/ru/styles/scss/main.scss
@@ -501,18 +501,70 @@
   .pfo {
     background-image: url(../../img/blog2.jpg);
     position: relative;
-    display: grid;
-    grid-template-rows: minmax(1px, 40px) minmax(1px, 170px) minmax(1px, 30px);
-    h4{
+    background-repeat: no-repeat;
+    background-size: contain;
+    background-position: center;
+    height: 433px;
+    width: 100%;
+    @include media-tablet {
+      height: 420px;
+    }
+    h4 {
       margin: 0;
       text-align: center;
     }
-    span{
+    .degree {
+      position: absolute;
+      bottom: 0;
+      width: 100%;
+      display: flex;
+      justify-content: space-around;
+      @include media-tablet {
+      }
+      b {
+        display: block;
+      }
+    }
+    span {
       display: block;
+      position: absolute;
       font-size: 12px;
       width: 121px;
+      margin-top: 0;
       text-align: center;
-   
+      @include media-sm-tablet {
+        width: 80px;
+      }
+      @include media-phone {
+        width: 50px;
+        font-size: 10px;
+      }
+      &.span-1 {
+        top: 71px;
+        left: 154px;
+        @include media-sm-tablet {
+          left: 125px;
+        }
+        @include media-phone {
+          left: 105px;
+        }
+        @media (max-width: 360px) {
+          left: 80px;
+          top: 90px;
+        }
+      }
+      &.span-2 {
+        bottom: 56px;
+        right: 25%;
+        line-height: 1;
+        @include media-sm-tablet {
+          right: 27%;
+        }
+        @media (max-width: 360px) {
+          bottom: 70px;
+          right: 29%;
+        }
+      }
     }
   }
   .border {
@@ -612,12 +664,12 @@
 .comments {
   margin-top: 3rem;
   &__form {
-    border: 1px solid #cdcdcd;
     box-sizing: border-box;
-    @include flex(row, space-between, center);
+    @include flex(row, flex-start, flex-start);
 
     .box {
       padding-left: 20px;
+      width: 100%;
     }
     textarea {
       width: 100%;
@@ -627,28 +679,41 @@
       background: #ffffff;
       border-radius: 4px;
       outline: none;
-      min-height: 2.2rem;
+      min-height: 3rem;
       margin-bottom: 1rem;
+      padding-top: 10px;
+      resize: none;
+    }
+    input {
+      width: 100%;
+      margin-bottom: 20px;
+      padding: 5px 0;
+    }
+    textarea,
+    input {
+      border: 2px solid #e7e7e7;
+      box-sizing: border-box;
+      border-radius: 5px;
+      width: 100%;
+
       padding-left: 1rem;
       &::placeholder {
         color: #d7d7d7;
         font-size: 14px;
       }
     }
-    textarea {
-      padding-top: 0.8rem;
-      resize: none;
-    }
 
     .btn {
-      margin: 0;
+      margin: 0 auto;
+      background: #dc513a;
+      box-shadow: 0px 2px 2px rgba(0, 0, 0, 0.25);
+      border-radius: 5px;
     }
   }
 }
 
 .comment {
   margin-bottom: 2rem;
-  background: #f5f5f5;
   padding: 8px 11px;
   @include flex(row, flex-start, flex-start);
 
@@ -656,7 +721,7 @@
     margin: 2px 0;
   }
   img {
-    max-width: 44px;
+    max-width: 60px;
     width: 100%;
     @media (max-width: 600px) {
       max-width: 50px;
@@ -665,30 +730,6 @@
   .comm {
     max-width: 100%;
     margin: 10px 0;
-  }
-  .date {
-    @include flex(row, space-between, center);
-    max-width: 104px;
-    width: 100%;
-    margin-top: 10px;
-    span {
-      font-size: 14px;
-      color: #bbbbbb;
-    }
-    img {
-      max-width: 18px;
-      width: 100%;
-    }
-    .img {
-      max-width: 100%;
-    }
-    @media (max-width: 600px) {
-      max-width: 87px;
-      margin-top: 5px;
-      img {
-        max-width: 10px;
-      }
-    }
   }
   &.right {
     margin-left: 3rem;
@@ -700,12 +741,11 @@
   }
   &__btn {
     display: block;
-    img {
-      width: 16px;
-      opacity: 1;
-      margin-top: 10px;
-      height: 18px;
-    }
+    text-align: right;
+    color: #B0B0B0;
+    font-size: 12px;
+    margin-top: 20px;
+    text-decoration: none;
   }
 }
 .calculator {
