--- a/OFFERS-355/ru/styles/scss/_most.scss
+++ b/OFFERS-355/ru/styles/scss/_most.scss
@@ -3,7 +3,6 @@ html {
   scroll-behavior: smooth;
   font-size: 16px;
   height: 100%;
-  background: #E5E5E5;
   @media (max-width: 460px) {
     font-size: 14px;
   }
@@ -117,7 +116,7 @@ ul {
    }
  }
  a{
-   color: #DC0000;
+  color: #874B4B;
    b{
      color: #000;
    }
