--- a/OFFERS-355/ru/styles/scss/main.scss
+++ b/OFFERS-355/ru/styles/scss/main.scss
@@ -465,36 +465,47 @@
     }
   }
   .bagr {
-    height: 445px;
+    height: 413px;
     padding-top: 26px;
     background-size: cover;
     background-position: center;
     padding: 26px 22px;
     position: relative;
-
+    margin: auto;
     p {
       position: absolute;
-      bottom: 0;
-      left: 0;
-      border-left: 8px solid #dc0000;
+      top: 50%;
+      transform: translateY(-50%);
+      right: 0;
+      width: 100%;
+      max-width: 336px;
+      background: #000000a4;
       color: #ffffff;
-      padding-left: 10px;
-      font-style: italic;
+     padding: 26px;
       font-weight: 600;
-      font-size: 18px;
+      font-size: 16px;
       margin-left: 30px;
       margin-right: 20px;
     }
-    @include media-lg-tablet {
-      height: 300px;
+    @include  media-sm-tablet {
+    margin-bottom: 120px;
+    height: 300px;
       P {
-        font-size: 15px;
+        position: relative;
+        bottom: 0;
+        padding: 15px;
+transform: translateY(50%);
+        max-width: 100%;
+        margin: 0 auto;
+        font-size: 12px;
       }
     }
     @include media-phone-med {
+      padding: 15px 22px;
+      margin-bottom: 100px;
       p {
-        margin-left: 20px;
-        font-size: 12px;
+     
+        font-size: 10px;
       }
     }
   }
