--- a/OFFERS-354/es/styles/scss/main.scss
+++ b/OFFERS-354/es/styles/scss/main.scss
@@ -446,41 +446,18 @@
   }
   .advertising {
     display: grid;
-    grid-template-columns: repeat(2, 1fr);
+    grid-template-columns: repeat(3, 1fr);
     grid-gap: 40px;
-    &__item {
-      a.box {
-        background: #f5f5f5;
-        text-decoration: none;
-
-        p {
-          margin-left: 10px;
-
-          width: 100%;
-          padding: 10px;
-          margin: 0;
-          font-size: 14px;
-          b {
-            font-size: 17px;
-            display: block;
-          }
-        }
-        img {
-          max-width: 112px;
-          width: 100%;
-        }
-        @include flex(row, flex-start, center);
-      }
-      .link {
-        display: block;
-        padding-top: 10px;
-        width: 100%;
-        text-decoration-line: underline;
-        font-weight: 300;
-        font-style: italic;
-        font-size: 14px;
-        color: #969696;
-        text-align: right;
+    img {
+      display: block;
+      width: 100%;
+    }
+    a {
+      text-decoration: none;
+      b {
+        font-weight: 500;
+        font-size: 16px;
+        color: #000;
       }
     }
     @include media-lg-tablet {
@@ -488,46 +465,36 @@
     }
   }
   .bagr {
-    height: 413px;
+    height: 445px;
     padding-top: 26px;
     background-size: cover;
     background-position: center;
     padding: 26px 22px;
     position: relative;
-    margin: auto;
+
     p {
       position: absolute;
-      top: 50%;
-      transform: translateY(-50%);
-      right: 0;
-      width: 100%;
-      max-width: 336px;
-      background: #000000a4;
+      bottom: 0;
+      left: 0;
+      border-left: 8px solid #dc0000;
       color: #ffffff;
-      padding: 26px;
+      padding-left: 10px;
+      font-style: italic;
       font-weight: 600;
-      font-size: 16px;
+      font-size: 18px;
       margin-left: 30px;
       margin-right: 20px;
     }
-    @include media-sm-tablet {
-      margin-bottom: 120px;
+    @include media-lg-tablet {
       height: 300px;
       P {
-        position: relative;
-        bottom: 0;
-        padding: 15px;
-        transform: translateY(50%);
-        max-width: 100%;
-        margin: 0 auto;
-        font-size: 12px;
+        font-size: 15px;
       }
     }
     @include media-phone-med {
-      padding: 15px 22px;
-      margin-bottom: 100px;
       p {
-        font-size: 10px;
+        margin-left: 20px;
+        font-size: 12px;
       }
     }
   }
@@ -603,74 +570,21 @@
   .border {
     color: #000000;
     font-size: 20px;
-    border: 5px solid #0095da;
+    border: 5px solid #dc513a;
     box-sizing: border-box;
     padding: 20px;
     margin: 20px 0;
     padding-left: 30px;
-    p {
-      font-size: 16px;
-      color: #000;
-      b {
-        font-style: italic;
-      }
-    }
     ul {
-      padding-left: 0;
+      margin-left: 10px;
+      padding-top: 20px;
     }
     li {
-      padding: 5px;
-      list-style-type: none;
-      padding-left: 0;
-      font-weight: normal;
+      padding: 10px;
 
+      padding-left: 6px;
+      font-weight: normal;
       font-style: normal;
-      @include flex(row);
-      &::before {
-        content: "";
-        width: 18px;
-        margin-top: 2px;
-        background-repeat: no-repeat;
-        height: 18px;
-        margin-right: 5px;
-        display: block;
-      }
-    }
-    span {
-      margin-top: 0;
-      max-width: 600px;
-      width: 100%;
-      display: block;
-      font-size: 16px;
-      color: #000;
-    }
-    a {
-      font-size: 16px;
-      color: #000;
-    }
-    .hypertens {
-      li {
-        &::before {
-          content: "";
-          background-image: url(../../img/list.svg);
-        }
-      }
-    }
-    .hypotens {
-      li {
-        &::before {
-          content: "";
-          background-image: url(../../img/list-2.svg);
-        }
-      }
-    }
-    &__img {
-      max-width: 300px;
-      width: 100%;
-    }
-    &__img2 {
-      max-width: 500px;
-      width: 100%;
     }
   }
 }
@@ -754,6 +668,7 @@
     @include flex(row, flex-start, flex-start);
 
     .box {
+      padding-left: 20px;
       width: 100%;
     }
     textarea {
@@ -761,6 +676,7 @@
       font-family: inherit;
       font-size: inherit;
       border: none;
+      background: #ffffff;
       border-radius: 4px;
       outline: none;
       min-height: 3rem;
@@ -776,14 +692,13 @@
     textarea,
     input {
       border: 2px solid #e7e7e7;
-      background: #E7E7E7;
       box-sizing: border-box;
       border-radius: 5px;
       width: 100%;
 
       padding-left: 1rem;
       &::placeholder {
-        color: #AEAEAE;
+        color: #d7d7d7;
         font-size: 14px;
       }
     }
@@ -827,7 +742,7 @@
   &__btn {
     display: block;
     text-align: right;
-    color: #b0b0b0;
+    color: #B0B0B0;
     font-size: 12px;
     margin-top: 20px;
     text-decoration: none;
