--- a/OFFERS-355/ru/styles/scss/_most.scss
+++ b/OFFERS-355/ru/styles/scss/_most.scss
@@ -46,7 +46,7 @@ h1 {
 .btn {
   width: 100%;
   text-align: center;
-  background: #216087;
+  background: #F18101;
   color: #fff;
   text-transform: uppercase;
   height: 50px;
