--- a/OFFERS-355/ru/styles/scss/components/_sidebar.scss
+++ b/OFFERS-355/ru/styles/scss/components/_sidebar.scss
@@ -2,111 +2,37 @@
   max-width: 300px;
   width: 100%;
   margin: 0 auto;
-  padding: 0 36px;
-  padding-left: 20px;
+  padding: 0 20px;
   @include media-large {
     display: none;
   }
-
-  &__new {
-    margin: 16px 0;
-    display: block;
-    box-sizing: border-box;
-    text-decoration: none;
-    &:nth-child(1) {
-      background-image: url(../../img/side1.png);
-      background-size: contain;
-      background-repeat: no-repeat;
-      padding: 5px 13px;
-      padding-left: 121px;
-      padding-top: 42px;
-      height: 104px;
-      P {
-        color: #fff;
-        font-size: 10px;
-        margin: 0;
-        line-height: 1.2;
-        font-weight: normal;
-      }
+  &__item {
+    background: #ffffff;
+    box-shadow: 0px 4px 10px rgba(0, 0, 0, 0.25);
+    margin-bottom: 15px;
+    img {
+      width: 100%;
     }
-    &:nth-child(2) {
-      background-image: url(../../img/side2.png);
-      background-size: contain;
-      background-repeat: no-repeat;
-      padding: 9px 13px;
-      padding-left: 121px;
-      height: 119px;
-      span {
-        display: block;
-        font-size: 8px;
-        color: #9b9b9b;
-        b {
-          margin-left: 2px;
-          font-size: 10px;
-          color: #ffe900;
-        }
-      }
-      P {
-        text-transform: uppercase;
-        font-weight: 800;
-        margin: 0;
-        margin-bottom: 10px;
-        font-size: 13px;
-        color: #ffe900;
-      }
+    p {
+      font-size: 18px;
     }
-    &:nth-child(3) {
-      background-image: url(../../img/side3.png);
-      background-size: contain;
-      background-repeat: no-repeat;
-      padding: 9px 13px;
-      padding-left: 16px;
-      padding-top: 233px;
-      height: 427px;
-      span {
-        display: block;
-        background: #649b6d;
-        border-radius: 5px;
-        text-transform: uppercase;
-        font-weight: 800;
-        font-size: 10px;
-        max-width: 152px;
-        color: #ffffff;
-        padding: 5px;
-        text-align: center;
-      }
-      P {
-        text-transform: uppercase;
-        font-weight: 800;
-        margin: 0;
-        margin-top: 15px;
-        font-size: 13px;
-        color: #ffffff;
-      }
+    span {
+      display: block;
+      font-size: 16px;
     }
-    &:nth-child(4) {
-      background-image: url(../../img/side4.png);
-      background-size: contain;
-      background-repeat: no-repeat;
-      padding: 9px 14px;
-      position: relative;
-      padding-left: 16px;
-      padding-top: 20px;
-      margin-bottom: 0;
-      height: 168px;
-
-      P {
-        text-transform: uppercase;
-        font-weight: 800;
-        position: absolute;
-        bottom: 0;
-        margin: 0;
-        margin-top: 15px;
-        font-size: 13px;
-        left: 0;
-        padding: 5px 14px;
-        color: #ffffff;
-      }
+    .get-date {
+      color: #707070;
+      font-style: italic;
+      font-weight: normal;
+      font-size: 14px;
+      margin-top: 5px;
+    }
+    p,
+    h2,
+    b {
+      display: block;
+      padding: 10px;
+      margin: 0;
     }
   }
 }
