--- a/OFFERS-355/ru/styles/scss/main.scss
+++ b/OFFERS-355/ru/styles/scss/main.scss
@@ -763,7 +763,7 @@
       border: none;
       border-radius: 4px;
       outline: none;
-      min-height: 3rem;
+      min-height: 9rem;
       margin-bottom: 1rem;
       padding-top: 10px;
       resize: none;
@@ -778,7 +778,6 @@
       border: 2px solid #e7e7e7;
       background: #E7E7E7;
       box-sizing: border-box;
-      border-radius: 5px;
       width: 100%;
 
       padding-left: 1rem;
@@ -789,27 +788,28 @@
     }
 
     .btn {
-      margin: 0 auto;
-      background: #dc513a;
-      box-shadow: 0px 2px 2px rgba(0, 0, 0, 0.25);
-      border-radius: 5px;
+      margin: 0 0;
     }
   }
 }
 
 .comment {
-  margin-bottom: 2rem;
-  padding: 8px 11px;
+  margin-bottom: 10px;
+  padding: 8px;
+  border: 1px solid #C2C2C2;
+box-sizing: border-box;
   @include flex(row, flex-start, flex-start);
-
+b{
+  font-size: 20px;
+}
   p {
     margin: 2px 0;
   }
   img {
-    max-width: 60px;
+    max-width: 87px;
     width: 100%;
     @media (max-width: 600px) {
-      max-width: 50px;
+      max-width: 60px;
     }
   }
   .comm {
@@ -821,8 +821,9 @@
   }
   .text {
     margin-left: 15px;
-
+    font-size: 20px;
     width: 100%;
+    font-weight: normal;
   }
   &__btn {
     display: block;
@@ -1026,206 +1027,4 @@
   }
 }
 
-.wheel-wrapper {
-  margin: 5rem 0;
-  .wheel {
-    max-width: 380px;
-    width: 100%;
-    margin: 0 auto;
-    position: relative;
-    margin-bottom: 4rem;
-  }
 
-  .wheel img {
-    max-width: 100%;
-    margin-bottom: 0;
-  }
-
-  .wheel-img {
-    -webkit-transition: 4s;
-    transition: 4s;
-  }
-
-  .wheel-cursor {
-    position: absolute;
-    width: 35% !important;
-    height: 35%;
-    top: 50%;
-    left: 50%;
-    -webkit-transform: translate(-50%, -50%);
-    transform: translate(-50%, -50%);
-  }
-  .wheel {
-    max-width: 380px;
-    width: 100%;
-    margin: 0 auto;
-    position: relative;
-  }
-
-  .wheel img {
-    max-width: 100%;
-    margin-bottom: 0;
-  }
-
-  .wheel-img {
-    -webkit-transition: 4s;
-    transition: 4s;
-  }
-
-  .wheel-cursor {
-    position: absolute;
-    width: 30%;
-    height: 30%;
-    @include flex(column, center, center);
-    top: 48%;
-    left: 50%;
-    background-image: url(../../img/0.png);
-    background-repeat: no-repeat;
-    background-position: center;
-    box-sizing: border-box;
-    background-size: contain;
-  }
-  .cursor-text {
-    display: inline-block;
-    margin-top: 2px;
-    font: 14px Arial;
-    line-height: 61px !important;
-    cursor: pointer;
-    border-radius: 50%;
-    vertical-align: middle;
-    text-align: center;
-    @media (max-width: 400px) {
-      font-size: 12px;
-    }
-  }
-  .super-rotation {
-    -webkit-animation-name: super-rotation;
-    animation-name: super-rotation;
-    -webkit-animation-duration: 7s;
-    animation-duration: 7.2s;
-    -webkit-animation-fill-mode: forwards;
-    animation-fill-mode: forwards;
-    -webkit-transition-timing-function: ease-in-out;
-    transition-timing-function: ease-in-out;
-  }
-
-  // @-webkit-keyframes super-rotation {
-  //   70% {
-  //       -webkit-transform: rotate(1783deg);
-  //       transform: rotate(1783deg)
-  //   }
-
-  //   100% {
-  //       -webkit-transform: rotate(1784deg);
-  //       transform: rotate(1884deg)
-  //   }
-  // }
-
-  @keyframes super-rotation {
-    70% {
-      transform: rotate(2000deg);
-    }
-
-    100% {
-      transform: rotate(1974deg);
-    }
-  }
-  .wheel {
-    &.none {
-      display: none;
-    }
-  }
-  .form {
-    display: none;
-    &.activ {
-      width: 100%;
-      margin: 0 auto;
-      @include flex(row, space-between, center);
-      form {
-        max-width: 230px;
-        width: 100%;
-        .btn {
-          margin-bottom: 0;
-        }
-      }
-      .input-wrap {
-        width: 100%;
-        p {
-          font-size: 14px;
-          color: #808080;
-        }
-        input {
-          width: 100%;
-          border: none;
-          height: 50px;
-          background: #f8f8f8;
-          box-shadow: inset 0px 4px 4px rgba(162, 162, 162, 0.25);
-          border-radius: 4px;
-          padding-left: 20px;
-          &::placeholder {
-            color: #d7d7d7;
-          }
-        }
-      }
-      @media (max-width: 1088px) {
-        @include flex(column, center, center);
-        form {
-          max-width: 300px;
-          width: 100%;
-          margin-top: 20px;
-          input {
-            height: 70px;
-          }
-        }
-      }
-
-      .row {
-        @include flex(row, center, center);
-        .img {
-          transform: translate(20%, 10%);
-          position: relative;
-          z-index: 9999;
-        }
-        @media (max-width: 600px) {
-          img {
-            display: none;
-          }
-        }
-      }
-      .primer {
-        .pricle {
-          background-image: url(../../img/pricle.png);
-          background-size: contain;
-          max-width: 222px;
-          background-repeat: no-repeat;
-          margin: 0 auto;
-          position: relative;
-          z-index: 6;
-          @include flex(row, center, flex-start);
-          padding-top: 25px;
-          box-sizing: border-box;
-          height: 105px;
-          margin-bottom: -80px;
-          &__item {
-            @include flex(column, center, center);
-            color: #ffff;
-            box-sizing: border-box;
-            &:last-child {
-              margin-left: 30px;
-            }
-            span {
-              font-size: 10px;
-              opacity: 0.8;
-            }
-            s {
-              font-size: 24px;
-            }
-            b {
-              font-size: 30px;
-            }
-          }
-        }
-      }
-    }
-  }
-}
