--- a/OFFERS-381/ro/css/styles.css
+++ b/OFFERS-381/ro/css/styles.css
@@ -85,7 +85,8 @@ video {
 	padding: 0;
 	border: 0;
 	font-size: 100%;
-	font: inherit;
+	font-family: 'Roboto', sans-serif;
+
 	vertical-align: baseline;
 }
 
