--- a/OFFERS-390/ro/css/settings.css
+++ b/OFFERS-390/ro/css/settings.css
@@ -72,7 +72,7 @@ body {
  min-width: 320px;
  padding: 0;
  margin: 0 auto;
- font-family: 'AvenirNextCyr', Arial, Helvetica, sans-serif;
+ font-family: 'Roboto', sans-serif;
  font-weight: 400;
  font-size: 16px;
  line-height: 24px;
